@@ -1,9 +1,10 @@
 ; file demonstrating how to create arbitary values
 ; load to any RTS2 component with --valuefile option
+; .s creates autosave values
 
 test1.d = -12.3 ; test double value
-test2.da = "1.2 3.4 -5.6";test array
+test2.das = "1.2 3.4 -5.6";test array
 test3.i = 98 ; test integer
-test4.ia="1 3 -5";test integer array
+test4.ias ="1 3 -5";test integer array
 test5 = "string aa" ; test string
-test6 = only_test
+test6s = only_test
